Fixed handling disconnected agents by REACTIVATE_AGENT call.

This patch fixes MESOS-10116 by preventing REACTIVATE_AGENT from
activating disconnected agents in the allocator and also fixes the
handling of agents that were removed while the reactivation was being
stored into the registry.

Review: https://reviews.apache.org/r/72363